test/fixtures/success/nested-icon/actual.js
<Icon name="foo">
  <Icon name="bar" />
</Icon>
