test/fixtures/error/duplicate-name-prop/actual.js
<Icon name="foo" name="bar" />
